<resources>
    <string name="app_name">Courier Application</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="findpack">Find a package</string>
    <string name="Contact">Contact</string>
    <string name="Wyloguj">Sign out</string>
    <string name="ObslugaKlienta">Customer service</string>
    <string name="nrTel">Phone</string>
    <string name="mail">E-mail</string>
    <string name="nrPrzesylki">Tracking number</string>
    <string name="find">Find</string>
    <string name="Anuluj">Cancel</string>
    <string name="dodajPrzes">Add package</string>
    <string name="Cofnij">Back</string>
    <string name="twojePacz">Your package</string>
    <string name="Zaloguj">Sign in</string>
    <string name="Login" translatable="false">Login</string>
    <string name="Haslo">Password</string>
    <string name="Imie">Name</string>
    <string name="Nazwisko">Surname</string>
    <string name="noweKonto">Create new account</string>
    <string name="polapuste">Fields cannot be empty</string>
    <string name="roznehasla">Passwords provided are different</string>
    <string name="rejestudana">Register succesfull</string>
    <string name="LoginiHalo">Fields cannot be empty!</string>
    <string name="wylogowany">Logged out</string>
    <string name="ForgotPas">Forgot password</string>
    <string name="ResetPas">Reset password</string>
    <string name="PasSend">Password send to your Email</string>
    <string name="DodMan">Add Manager</string>
    <string name="DelMan">Delete manager</string>
    <string name="makeCour">Add the courier permission</string>
    <string name="makeMan">Add the manager permission</string>
    <string name="makeUser">Remove permissions</string>
    <string name="mailDFi">Mail not found</string>
    <string name="AddPack">Add a package</string>
    <string name="Customermail">Customer mail</string>
    <string name="CourierMail">Courier Mail</string>
    <string name="CustomName">Customer Name</string>
    <string name="CustomerSurname">Customer Surname</string>
    <string name="CustomerPhone">Customer Phone</string>
    <string name="Street">Street</string>
    <string name="ZipCode">Postcode</string>
    <string name="City">City</string>
    <string name="Housenumber">House number</string>
    <string name="Flatnumber">Flat number</string>
    <string name="pckadd">The package has been added</string>
    <string name="chkPack">Check Package</string>
    <string name="IdPack">ID</string>
    <string name="idNFind">ID not found</string>
    <string name="rmPack">Remove package</string>
    <string name="PackDelete">Package has been deleted</string>
    <string name="AreUsus">Are you sure?</string>
    <string name="Ok" translatable="false">OK</string>
    <string name="PckDsFound">The package hasn\'t been found</string>
    <string name="AddMagazin">Add a magazine</string>
    <string name="Add">Add</string>
    <string name="Number">Number</string>
    <string name="MagAdd">The magazine has been added</string>
    <string name="CheckMag">Check Magazine</string>
    <string name="Del">Delete</string>
    <string name="MagDelete">Magazine has been deleted</string>
    <string name="Magazine">Magazine</string>
    <string name="ChgLng">Change language</string>
    <string name="Polski" translatable="false">Polski</string>
    <string name="English" translatable="false">English</string>
    <string name="Checkyourpackage">Check your package</string>
    <string name="Navigate">Navigate</string>
    <string name="collectPck">Collect Pack</string>
    <string name="NavToMagazine">Navigate To Magazine</string>
    <string name="chkPendPack">Check pending packages</string>
    <string name="Findtheshortestroute">Find the shortest route</string>
    <string name="Packageunclaimed">Package unclaimed</string>
    <string name="Packagedelivered">Package delivered</string>
    <string name="time">Time</string>
    <string name="SetEstimateddeliverytime">Set Estimated delivery time</string>
    <string name="PackageRejected">Package Rejected</string>
    <string name="wrongaddress">Wrong address</string>
    <string name="reason">Reason</string>
    <string name="UnclaimedPackage">Unclaimed Packages</string>
    <string name="RejectedWrongaddress">Rejected/Wrong address</string>
    <string name="ReturntoMagazine">Return to Magazine</string>
    <string name="Deliveragain">Deliver again</string>
    <string name="Estimateddeliverytime">Estimated delivery time</string>
    <string name="CourierPhone">Courier phone</string>
    <string name="Confirmdelivery">Confirm delivery</string>
    <string name="Undelivered">Undelivered</string>
    <string name="ReturnedtotheMagazine">Returned to the magazine</string>
    <string name="Returntosender">Return to sender</string>
    <string name="PackNDeliver">If the package hasn\'t been delivered, contact the hotline</string>
    <string name="Deliveredpackages">Delivered packages</string>
    <string name="Confirmed">Confirmed</string>
    <string name="Reportednondelivery">Reported non-delivery</string>
    <string name="Deliverytime">Delivery time</string>
    <string name="ClientPhont">Client phone</string>
    <string name="Role">Role</string>
    <string name="User">User</string>
    <string name="Courier">Courier</string>
    <string name="Manager" translatable="false">Manager</string>
    <string name="Admin" translatable="false">Admin</string>
</resources>